--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/sficon.png" rel="icon">
+  <link href="assets/img/sfamilia-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -84,7 +84,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="#about" class="get-started-btn scrollto">Consulte sus resultados</a>
+      <a href="https://labcompusagradafamilia.orion-labs.com/consulta-resultados/login" class="get-started-btn scrollto">Consulte sus resultados</a>
     </div>
   </header><!-- End Header -->
 
