--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,8 @@
       <h1>Consultas <span>En linea</span></h1>
       <h2>Consulte sus resultados medicos directamente aqui</h2>
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Consulte sus resultados</a>
-        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Introducción</span></a>
+        <a href="https://labcompusagradafamilia.orion-labs.com/consulta-resultados/login" class="btn-get-started scrollto">Consulte sus resultados</a>
+        <a href="#contact" class="glightbox btn-watch-video"><i class="bi bi-geo-alt-fill"></i><span>Estamos Ubicados</span></a>
       </div>
     </div>
   </section><!-- End Hero -->
