--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Sagrada Familia</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Es un centro medico con acceso a consulta de resultados en linea" name="description">
+  <meta content="centro medico, laboratorio clinico, automatizado, consulta de resultados, sagrada familia, agendamiento de cita" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/sficon.png" rel="icon">
