Estilos mision vision

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
   <title>Sagrada Familia</title>
   <meta content="Es un centro medico con acceso a consulta de resultados en linea" name="description">
-  <meta content="centro medico, laboratorio clinico, automatizado, consulta de resultados, sagrada familia, agendamiento de cita" name="keywords">
+  <meta content="centro medico, laboratorio clinico, automatizado, consulta de resultados, sagrada familia, agendamiento de cita, quito" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/sficon.png" rel="icon">
