--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/estilos.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: BizLand - v3.8.1
