--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
 
   <title>Sagrada Familia</title>
   <meta content="Es un centro medico con acceso a consulta de resultados en linea" name="description">
-  <meta content="centro medico, laboratorio clinico, automatizado, consulta de resultados, sagrada familia, agendamiento de cita, quito" name="keywords">
+  <meta
+    content="centro medico, laboratorio clinico, automatizado, consulta de resultados, sagrada familia, agendamiento de cita, quito"
+    name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/sficon.png" rel="icon">
@@ -130,7 +132,7 @@
             data-aos-delay="100">
             <h3>Centro medico Sagrada Familia.</h3>
             <p class="fst-italic">
-              Mantenemos un horario de atención amplio para nuestros clientes, facilitando la atencion toda la semana.
+              Mantenemos un horario de atención amplio para nuestros pacientes, facilitando la atención toda la semana.
             </p>
             <ul>
               <li>
@@ -151,7 +153,8 @@
               </li>
             </ul>
             <p>
-              Nos preocupamos por su salud ......... (Falta informacion) texto de ejemplo texto de ejemplo texto de ejemplotexto de ejemplo texto de ejemplotexto de ejemplo texto de ejemplo texto de ejemplotexto de ejemplo texto de ejemplotexto de ejemplo
+              Nos preocupamos por su salud con nuestro equipo de profesionales el Dr. Eduardo Solís Zambrano Médico General y Magister en
+              Ultrasonido, la Dra. Silvia Solís Zambrano Magister en Diabetesy Diplomado en nutrición y dietética
             </p>
           </div>
         </div>
@@ -165,7 +168,7 @@
         <div class="section-title-w">
           <h2>Mision y Vision</h2>
           <h3>Nuestros <span>Objetivos</span></h3>
-          <p>EL centro medico y laboratiorio sagrada familia busca.</p>
+          <p>El centro medico y laboratiorio sagrada familia tiene como objetivos:</p>
         </div>
         <div class="row">
           <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
@@ -211,10 +214,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch" data-aos="zoom-in"
-            data-aos-delay="200">
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class='bx bx-show'></i></div>
               <h4><a href="">Oftalmología</a></h4>
             </div>
           </div>
@@ -222,70 +224,71 @@
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
             data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-smile"></i></div>
               <h4><a href="">Odontología</a></h4>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
+            data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class='bx bx-run'></i></i></div>
               <h4><a href="">Traumatología</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class='bx bx-book-heart'></i></div>
               <h4><a href="">Urología</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class='bx bx-female'></i></div>
               <h4><a href="">Ginecología</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class='bx bx-user-voice'></i></div>
               <h4><a href="">Psiquiatría</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class='bx bx-face'></i></div>
               <h4><a href="">Dermatología</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class='bx bx-home-heart'></i></div>
               <h4><a href="">Farmacia</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class='bx bx-accessibility'></i></div>
               <h4><a href="">Terapia física y Rehabilitación</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class='bx bx-calendar-heart'></i></div>
               <h4><a href="">Cirugía</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class='bx bx-bowl-hot'></i></div>
               <h4><a href="">Nutrición y Dietética</a></h4>
             </div>
           </div>
@@ -349,8 +352,6 @@
         <div class="section-title">
           <h2>Equipo</h2>
           <h3>Nuestro equipo de <span>Trabajo</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae
-            autem.</p>
         </div>
 
         <div class="row">
@@ -380,7 +381,7 @@
                   </div>
                 </div>
               </div>
-              
+
             </div>
           </div>
 
@@ -429,7 +430,7 @@
 
           <div class="col-lg-12 ">
             <iframe class="mb-4 mb-lg-0"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.05961383319!2d-79.4383958852462!3d-1.1173901991849435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x99870291d9347af4!2zMcKwMDcnMDIuNiJTIDc5wrAyNicxMC40Ilc!5e0!3m2!1ses!2sec!4v1661267514268!5m2!1ses!2sec"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.05961383319!2d-79.4383958852462!3d-1.1173901991849435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x99870291d9347af4!2zMcKwMDcnMDIuNiJTIDc5wrAyNicxMC40Ilc!5e0!3m2!1ses!2sec!4v1661267514268!5m2!1ses!2sec"
               frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
 
@@ -475,7 +476,7 @@
           <div class="col-lg-6 col-md-6 footer-contact">
             <h3>Sagrada Familia<span>.</span></h3>
             <p>
-              Av. 2 de julio junto al  <br>
+              Av. 2 de julio junto al <br>
               Banco del Pichincha<br><br>
               <strong>Telefono:</strong> 052903433<br>
               <strong>Correo:</strong> centromedicosagradafamilia@gmail.com<br>
@@ -502,8 +503,8 @@
                   class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/sagradafamilia_dra.silviasolis/" class="instagram"><i
                   class="bx bxl-instagram"></i></a>
-                  <a href="https://www.instagram.com/sagradafamilia_dra.silviasolis/" class="whatsapp"><i
-                    class="bx bxl-whatsapp"></i></a>
+              <a href="https://www.instagram.com/sagradafamilia_dra.silviasolis/" class="whatsapp"><i
+                  class="bx bxl-whatsapp"></i></a>
               <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
             </div>
