Ediciones de informacion final 2

--- a/public/index.html
+++ b/public/index.html
@@ -101,8 +101,8 @@
   <section id="publi" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <img src="assets/img/88.png" alt="">
-      <h1>Consultas <span>En linea</span></h1>
-      <h2>Consulte sus resultados medicos directamente aqui</h2>
+      <h1>Consultas <span>EN LÍNEA</span></h1>
+      <h2>Resultados médicos directamente aquí</h2>
       <div class="d-flex">
         <a href="https://labcompusagradafamilia.orion-labs.com/consulta-resultados/login"
           class="btn-get-started scrollto">Consulte sus resultados</a>
@@ -130,9 +130,9 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up"
             data-aos-delay="100">
-            <h3>Centro medico Sagrada Familia.</h3>
+            <h3 style="text-align: center;">CENTRO DE ESPECIALIDADES MÉDICAS SAGRADA FAMILIA</h3>
             <p class="fst-italic">
-              Mantenemos un horario de atención amplio para nuestros pacientes, facilitando la atención toda la semana.
+              Mantenemos un horario de atención amplio para nuestros pacientes, facilitando los servicios médicos toda la semana.
             </p>
             <ul>
               <li>
@@ -141,20 +141,19 @@
                   <h5>Horario de atención</h5>
                   <div class="row">
                     <div class="col">
-                      <p>Lunes a Sabado: </p>
+                      <p>Lunes a Sábado: </p>
                       <p>Domingo: </p>
                     </div>
                     <div class="col">
-                      <p><strong>7:30 am a 5:00 pm</strong></p>
-                      <p><strong>7:30 am a 1:00 pm</strong></p>
+                      <p><strong>07:30 am a 05:00 pm</strong></p>
+                      <p><strong>07:30 am a 01:00 pm</strong></p>
                     </div>
                   </div>
                 </div>
               </li>
             </ul>
             <p>
-              Nos preocupamos por su salud con nuestro equipo de profesionales el Dr. Eduardo Solís Zambrano Médico General y Magister en
-              Ultrasonido, la Dra. Silvia Solís Zambrano Magister en Diabetesy Diplomado en nutrición y dietética
+              Porque la salud de usted y de su familia son nuestra prioridad, nos esforzamos cada día para brindarles un servicio de calidad.
             </p>
           </div>
         </div>
@@ -166,28 +165,25 @@
     <section id="featured-services" class="featured-services">
       <div class="container" data-aos="fade-up">
         <div class="section-title-w">
-          <h2>Mision y Vision</h2>
+          <h2>Misión y Visión</h2>
           <h3>Nuestros <span>Objetivos</span></h3>
-          <p>El centro medico y laboratiorio sagrada familia tiene como objetivos:</p>
+
         </div>
         <div class="row">
           <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box text-center" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class='bx bx-bullseye'></i></div>
-              <h4 class="title"><a href="">Mision</a></h4>
-              <p class="description text-justify">Desarrollar y evolucionar en avances de la salud implementando nuevos
-                servicios médicos y nuevas especialidades evitandos viajes largos o ir a otras ciudades para así
-                contribuir con la mejora y evolución de cada una de las familia de la parroquia San Carlos</p>
+              <h4 class="title"><a href="">Misión</a></h4>
+              <p class="description text-justify">Brindar atención médica de excelencia a toda la comunidad de la parroquia San Carlos, basada en la evidencia científica y contenido ético, acompañando al paciente y su familia, a través de un equipo de salud comprometido con la innovación tecnológica.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-6 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box text-center" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class='bx bx-bulb'></i></div>
-              <h4 class="title"><a href="">Vision</a></h4>
-              <p class="description text-justify">Desarrollar y evolucionar en avances de la salud implementando nuevos
-                servicios médicos y nuevas especialidades evitandos viajes largos o ir a otras ciudades para así
-                contribuir con el bienestar de una de las familia de la parroquia San Carlos</p>
+              <h4 class="title"><a href="">Visión</a></h4>
+              <p class="description text-justify">Ser referentes en el desarrollo y evolución de servicios en especialidades médicas, evitando largos viajes a otras ciudades
+                con el objetivo de contribuir con el bienestar de las familias de la parroquia San Carlos.</p>
             </div>
           </div>
 
@@ -202,8 +198,8 @@
 
         <div class="section-title">
           <h2>Servicios</h2>
-          <h3>Revisa nuestros <span>Servicios</span></h3>
-          <p>Diagnosticos y tratamientos de:</p>
+          <h3>SERVICIO DE <span>ESPECIALIDADES MÉDICAS</span></h3>
+
         </div>
 
         <div class="row">
@@ -275,7 +271,7 @@
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class='bx bx-accessibility'></i></div>
-              <h4><a href="">Terapia física y Rehabilitación</a></h4>
+              <h4><a href="">Terapia Física y Rehabilitación</a></h4>
             </div>
           </div>
 
@@ -370,14 +366,15 @@
               <div class="row">
                 <div class="col" style="text-align: center;">
                   <div class="member-info">
-                    <h4>Silvia Solis</h4>
-                    <span>Dra. Silvia Solis Zambrano</span>
+                    <h4>Dra. Silvia Solís Zambrano</h4>
+                    <span>Magister en Diabetes, Diplomado en Nutrición y Dietética</span>
                   </div>
                 </div>
                 <div class="col" style="text-align: center;">
                   <div class="member-info">
-                    <h4>Eduardo Solis</h4>
-                    <span>Dr. Eduardo Solis Zambrano</span>
+                    <h4>Dr. Eduardo Solís Zambrano</h4>
+                    <span>Médico General y Magister en
+                      Ultrasonido</span>
                   </div>
                 </div>
               </div>
@@ -396,15 +393,14 @@
 
         <div class="section-title">
           <h2>Contacto</h2>
-          <h3>Contactanos <span>Aqui</span></h3>
-          <p>Se encuentra en esta sección toda nuestra informaciòn de contacto</p>
+          <h3>Contáctanos <span>Aquí</span></h3>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-5">
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
-              <h3>Nuestra dirección</h3>
+              <h3>Dirección</h3>
               <p>Av. 2 de julio junto al Banco del Pichincha</p>
             </div>
           </div>
@@ -420,7 +416,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
-              <h3>Nuestro Telefono</h3>
+              <h3>Teléfono</h3>
               <p>052903433</p>
             </div>
           </div>
