--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a
-            href="mailto:contact@example.com">centromedicosagradafamilia@gmail.com</a></i>
+            href="mailto:contact@example.com">centromedicosagradafamilia1998@gmail.com</a></i>
         <i class="bi bi-telephone d-flex align-items-center ms-4"><span>052903433</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -174,7 +174,8 @@
             <div class="icon-box text-center" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class='bx bx-bullseye'></i></div>
               <h4 class="title"><a href="">Misión</a></h4>
-              <p class="description text-justify">Brindar atención médica de excelencia a toda la comunidad de la parroquia San Carlos, basada en la evidencia científica y contenido ético, acompañando al paciente y su familia, a través de un equipo de salud comprometido con la innovación tecnológica.</p>
+              <p class="description text-justify">Brindar atención médica de excelencia a toda la comunidad de la parroquia San Carlos del Cantún Quevedo y sectores aledaños, basada en la evidencia científica y 
+                contenido ético, acompañando al paciente y su familia, a través de un equipo de salud comprometido con la innovación tecnológica.</p>
             </div>
           </div>
 
@@ -289,6 +290,27 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class='bx bx-male-female'></i></div>
+              <h4><a href="">Medicina Familiar</a></h4>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class='bx bx-home-heart'></i></div>
+              <h4><a href="">Medicina comunitaria</a></h4>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class='bx bx-plus-medical'></i></div>
+              <h4><a href="">Medicina interna</a></h4>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -367,14 +389,14 @@
                 <div class="col" style="text-align: center;">
                   <div class="member-info">
                     <h4>Dra. Silvia Solís Zambrano</h4>
-                    <span>Magister en Diabetes, Diplomado en Nutrición y Dietética</span>
+                    <span>Médico General, Magister en Diabetes Diplomado en Nutrición y Dietética</span>
                   </div>
                 </div>
                 <div class="col" style="text-align: center;">
                   <div class="member-info">
                     <h4>Dr. Eduardo Solís Zambrano</h4>
                     <span>Médico General y Magister en
-                      Ultrasonido</span>
+                      Ecografia clinica para atención primaria</span>
                   </div>
                 </div>
               </div>
