Ediciones de mayusculas

--- a/public/index.html
+++ b/public/index.html
@@ -300,14 +300,14 @@
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class='bx bx-home-heart'></i></div>
-              <h4><a href="">Medicina comunitaria</a></h4>
+              <h4><a href="">Medicina Comunitaria</a></h4>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class='bx bx-plus-medical'></i></div>
-              <h4><a href="">Medicina interna</a></h4>
+              <h4><a href="">Medicina Interna</a></h4>
             </div>
           </div>
 
@@ -396,7 +396,7 @@
                   <div class="member-info">
                     <h4>Dr. Eduardo Solís Zambrano</h4>
                     <span>Médico General y Magister en
-                      Ecografia clinica para atención primaria</span>
+                      Ecografia Clinica para Atención Primaria</span>
                   </div>
                 </div>
               </div>
