Ediciones de tilde

--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
             <div class="icon-box text-center" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class='bx bx-bullseye'></i></div>
               <h4 class="title"><a href="">Misión</a></h4>
-              <p class="description text-justify">Brindar atención médica de excelencia a toda la comunidad de la parroquia San Carlos del Cantún Quevedo y sectores aledaños, basada en la evidencia científica y 
+              <p class="description text-justify">Brindar atención médica de excelencia a toda la comunidad de la parroquia San Carlos del Cantón Quevedo y sectores aledaños, basada en la evidencia científica y 
                 contenido ético, acompañando al paciente y su familia, a través de un equipo de salud comprometido con la innovación tecnológica.</p>
             </div>
           </div>
