--- a/public/index.html
+++ b/public/index.html
@@ -293,14 +293,7 @@
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class='bx bx-male-female'></i></div>
-              <h4><a href="">Medicina Familiar</a></h4>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class='bx bx-home-heart'></i></div>
-              <h4><a href="">Medicina Comunitaria</a></h4>
+              <h4><a href="">Medicina Familiar y Comunitaria</a></h4>
             </div>
           </div>
 
@@ -431,7 +424,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Nuestro Correo</h3>
-              <p>centromedicosagradafamilia@gmail.com</p>
+              <p>centromedicosagradafamilia1998@gmail.com</p>
             </div>
           </div>
 
