--- a/public/index.html
+++ b/public/index.html
@@ -285,6 +285,13 @@
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
+              <div class="icon"><i class='bx bxl-jquery'></i></div>
+              <h4><a href="">Ecografia</a></h4>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
               <div class="icon"><i class='bx bx-bowl-hot'></i></div>
               <h4><a href="">Nutrición y Dietética</a></h4>
             </div>
