cambio de telefono

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a
             href="mailto:contact@example.com">centromedicosagradafamilia1998@gmail.com</a></i>
-        <i class="bi bi-telephone d-flex align-items-center ms-4"><span>052903433</span></i>
+        <i class="bi bi-telephone d-flex align-items-center ms-4"><span>053056170 / 0991713841</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://www.instagram.com/sagradafamilia_dra.silviasolis/" class="instagram"><i
@@ -439,7 +439,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Teléfono</h3>
-              <p>052903433</p>
+              <p>053056170 / 0991713841</p>
             </div>
           </div>
         </div>
@@ -496,7 +496,7 @@
             <p>
               Av. 2 de julio junto al <br>
               Banco del Pichincha<br><br>
-              <strong>Telefono:</strong> 052903433<br>
+              <strong>Telefono:</strong> 053056170 / 0991713841<br>
               <strong>Correo:</strong> centromedicosagradafamilia1998@gmail.com<br>
             </p>
           </div>
